# cs2-items-schema-zh-en

./: .gitignore  README.md  README_zh.md  collect.py  pyproject.toml
schemas/: definitions.json  items.json  musics.json  paints.json  qualities.json  rarities.json  sticker_kits.json  tints.json  types.json
sql/: create_mssql.sql  create_mysql.sql  create_oracle.sql  create_postgre.sql  create_sqlite.sql  populate.sql
src/: __init__.py  containers.py  fields.py  items.py  main.py  sql.py  sticker_kits.py  typings.py  utils.py
src/collectors/: __init__.py  base.py  containers.py  fields.py  items.py  sticker_kits.py
src/config/: __init__.py  settings.py  urls.py
src/core/: __init__.py  resource_collector.py
src/exceptions/: __init__.py  base.py  config.py  data.py
src/models/: __init__.py  types.py
src/services/: __init__.py  auto_downloader.py  data_fetcher.py  file_manager.py  item_formatter.py
src/sql/: __init__.py  creator.py
static/: csgo_schinese.txt
