[project]
name = "cs2-items-schema"
version = "2.0.0"
description = "Enhanced CS2 items schema with Chinese localization and improved architecture"
authors = [
    { name = "Dmytro Tkachenko", email = "itsme@somespecial.one" },
    { name = "AndersonBY", email = "andersonby@163.com" },
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
keywords = ["cs2", "csgo", "steam", "items", "schema", "gaming"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "sqlalchemy>=2.0.23,<3.0.0",
    "aiohttp>=3.9.1,<4.0.0",
    "vdf>=3.4,<4.0",
    "multidict>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/somespecialone/cs2-items-schema"
Repository = "https://github.com/somespecialone/cs2-items-schema.git"
Issues = "https://github.com/somespecialone/cs2-items-schema/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pdm.scripts]
collect = "python collect.py"
